# graph-mesh

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_meta_ontology_enhancements.py
.github/workflows/: docs.yml  graph-mesh.yml  release.yml  test.yml  validate.yml
autoschema/: __init__.py
data_sources/: composite_example.yaml  custom_domain.yaml  demo.yaml  fibo_financial.yaml  generic_exploration.yaml  mismo.yaml  sample_manifest.yaml
data_sources/mismo/: MISMO_3.6.2_Reference_Model.xsd
data_sources/schemas/: sample.xsd
docker/: ontmalizer.Dockerfile  orchestrator.Dockerfile
docker/aml/: Dockerfile
docker/bertmap/: Dockerfile
docker/logmap/: Dockerfile
docker/ontmalizer/: Dockerfile  README.md
docs/: architecture.md  infrastructure.md  verification.md
docs_sphinx/: api_reference.rst  architecture.md  conf.py  development.md  getting_started.md  index.rst  pluggable_meta_ontology.md  user_guide.md
examples/: parallel_alignment_example.py
graph-mesh-orchestrator/: align.py  convert.py  fetch.py  fuse.py  run.py  utils.py  validate.py
graph_mesh_aligner/: README.md  __init__.py  fusion.py  matchers.py  quality.py  voting.py
graph_mesh_converters/: __init__.py  base.py  xsd.py
graph_mesh_core/: ALIGNMENT_PATTERNS.md  __init__.py  meta_ontology.py  meta_ontology_base.py  meta_ontology_registry.py  reasoning.py  upper_ontology.py  validation.py
graph_mesh_ingest/: __init__.py  converter_base.py  csv_to_owl.py  json_to_owl.py  xsd_to_owl.py
graph_mesh_orchestrator/: __init__.py  errors.py  ingest.py  models.py  pipeline.py  validation.py
tests/: README.md  __init__.py  conftest.py  test_json_to_owl.py  test_meta_ontology.py  test_orchestrator.py  test_xsd_to_owl.py
(+28 files in other folders)
